--- a/angular.json
+++ b/angular.json
@@ -26,10 +26,11 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "./node_modules/flag-icons/css/flag-icons.min.css",
               "src/styles.css"
             ],
-            "scripts": [ "./node_modules/jquery/dist/jquery.js",
-            "./node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": ["./node_modules/bootstrap/dist/js/bootstrap.js"]
           },
           "configurations": {
             "production": {
