--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
-    "jquery": "^3.7.1",
+    "bootstrap-icons": "^1.11.3",
+    "flag-icons": "^7.2.1",
+    "i18n-iso-countries": "^7.11.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
