--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "./node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "./node_modules/flag-icons/css/flag-icons.min.css",
               "src/styles.css"
             ],
